css/style.css
body {
    font-family: 'Poppins', sans-serif;
    background: linear-gradient(135deg, #99a1ed, #2e2ef5);
    color: #fff;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    text-align: center;
    overflow: hidden;
  }

  header {
    padding: 20px;
  }

  header h1 {
    font-family: 'Russo One', sans-serif;
    font-size: 3.5em;
    margin: 0;
    background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
  }

  header p {
    font-size: 1.3em;
    font-weight: 700;
    max-width: 80%;
    margin: 1rem auto;
    text-align: center;
    background: linear-gradient(90deg, violet, indigo, blue, rgb(8, 68, 8), rgb(254, 254, 40), orange, red);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-style: italic;
    letter-spacing: 0.3rem;
    text-shadow: 2px 0px 4px rgba(0, 0, 0, 0.5);
  }

  .thumbnail {
    margin: 5px 0;
    max-width: 50%;
    border-radius: 15px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  }

  .btn-container {
    margin: 5px auto;
    display: flex;
    max-width: 40%;
    gap: 20px;
  }

  .download-btn, .play-btn, .download-tv-btn {
    background-color: #ff5722;
    color: #fff;
    text-decoration: none;
    font-weight: 600;
    letter-spacing: 2px;
  }

  .button{
  display: block;
  margin: 10px auto;
  padding: 0.8rem 1rem;
  font-size: 1rem;
  color: #e4870f;
  border: 2px solid #e4870f;
  background:none;
  border-radius: 0.2rem;
  font-family: 'Roboto', sans-serif;
  transition: color 0.25s, border-color 0.25s, box-shadow 0.25s, transform 0.25s;
}

  .button:hover{
      border-color: #ddf845;
      transform: scale(1.05) translateY(-3px);
      color: #fff;
      box-shadow: 0         0.5em        0.5em      -0.4em         #ddf845;
      /* filter: drop-shadow(0 1.2mm 1mm #ddf845); */
      cursor: pointer;
  }

  footer {
    margin-top: 10px;
    font-size: 1em;
    font-weight: 300;
    color: #2a2a31;
  }

  /* Responsive Styles */
  @media (max-width: 768px) {
    header h1 {
      font-size: 2.5em;
    }
    header p {
      font-size: 1em;
    }

    .btn-container{
      flex-direction: column;
      margin: 10px auto;
    }
    

    .button {
      padding: 12px 25px;
      font-size: 1em;
      margin: 5px auto;
      width: -webkit-fill-available;
    }

    .thumbnail{
      max-width: 80%;
    }
  }

  @media (max-width: 480px) {
    header h1 {
      font-size: 2em;
    }
    header p {
      font-size: 0.9em;
    }

    .btn-container{
      flex-direction: column;
      margin: 10px auto;
    }

    .button {
      padding: 10px 20px;
      font-size: 0.8em;
      margin: 5px auto;
      width: -webkit-fill-available;
    }

    .thumbnail{
      max-width: 80%;
    }
  }

